--- a/.github/workflows/create-badge.yaml
+++ b/.github/workflows/create-badge.yaml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      name: Create coverage badge
-      uses: emibcn/badge-action@v2.0.2
-      with:
-        label: 'Test coverage'
-        status: '53.4%'
-        color: 'blue,555,daf'
-        path: '.github/badges/coverage.svg'
+      - name: Create coverage badge
+        uses: emibcn/badge-action@v2.0.2
+        with:
+          label: 'Test coverage'
+          status: '53.4%'
+          color: 'blue,555,daf'
+          path: '.github/badges/coverage.svg'
