--- a/.github/workflows/create-badge.yaml
+++ b/.github/workflows/create-badge.yaml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
             fetch-depth: 0
-            token: ${{ secrets.GH_TOKEN }}
+            token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare environment
         id: coverage
