--- a/.github/workflows/create-badge.yaml
+++ b/.github/workflows/create-badge.yaml
@@ -12,7 +12,7 @@ jobs:
       # Get current banch name to use it as dest directory
       - name: Extract branch name
         shell: bash
-        run: echo "branch=${GITHUB_REF#refs/heads/}" >> "${GITHUB_OUTPUT}"
+        run: echo "branch=${GITHUB_REF#refs/heads/}" >> "$GITHUB_ENV"
         id: extract_branch
 
 
@@ -30,11 +30,9 @@ jobs:
           echo "current_coverage=$(go tool cover -func coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')" >> $GITHUB_ENV
           # Output values to be used by other steps
           echo "path=${BADGE_PATH}" >> $GITHUB_ENV
-          echo "branch=${BRANCH}" >> $GITHUB_ENV
         env:
           COVERAGE: ${{ env.current_coverage }}
           BADGE_PATH: ${{ steps.extract_branch.outputs.branch }}/test-badge.svg
-          BRANCH: main
 
       # Create the directory where badges will be saved, if needed
       - name: Create destination directory
