--- a/.github/workflows/create-badge.yaml
+++ b/.github/workflows/create-badge.yaml
@@ -9,13 +9,6 @@ jobs:
     name: A job to test this action
     steps:
 
-      # Get current banch name to use it as dest directory
-      - name: Extract branch name
-        shell: bash
-        run: echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-        id: extract_branch
-
-
       - uses: actions/checkout@v3
         with:
             fetch-depth: 0
@@ -32,8 +25,7 @@ jobs:
           echo "path=${BADGE_PATH}" >> $GITHUB_ENV
         env:
           COVERAGE: ${{ env.current_coverage }}
-          BADGE_PATH: ${{ env.branch }}/test-badge.svg
-          BRANCH: ${{ env.branch }}
+          BADGE_PATH: .github/badges/code-coverage.svg
 
       # Create the directory where badges will be saved, if needed
       - name: Create destination directory
@@ -46,7 +38,7 @@ jobs:
         uses: emibcn/badge-action@v2.0.2
         id: badge
         with:
-          label: 'Test coverage'
+          label: 'Code coverage'
           status: ${{ env.current_coverage }}
           color: 'blue,555,daf'
           path: ${{ env.path }}
