--- a/.github/workflows/create-badge.yaml
+++ b/.github/workflows/create-badge.yaml
@@ -11,8 +11,8 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-            fetch-depth: 0
-            token: ${{ secrets.GH_TOKEN }}
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare environment
         id: coverage
