--- a/.github/workflows/diff-coverage.yaml
+++ b/.github/workflows/diff-coverage.yaml
@@ -1,3 +1,10 @@
+name: Calculate diff
+
+on:
+    pull_request:
+        branches:
+            - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
