--- a/.github/workflows/pr-create.yaml
+++ b/.github/workflows/pr-create.yaml
@@ -18,5 +18,5 @@ jobs:
         uses: devops-infra/action-pull-request@v0.5.5
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          target_branch: master
+          target_branch: main
           title: My pull request
