--- a/.github/workflows/pr-create.yaml
+++ b/.github/workflows/pr-create.yaml
@@ -21,3 +21,11 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
           target_branch: main
           title: My pull request
+          label: enhancement
+          milestone: My milestone
+          draft: true
+          old_string: "<!-- Add your description here -->"
+          new_string: "** Automatic pull request**"
+          get_diff: true
+          ignore_users: "dependabot"
+          allow_no_diff: false
